--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,25 @@
-ale-py==0.7.5
-AutoROM==0.4.2
-AutoROM.accept-rom-license==0.6.1
-certifi==2024.6.2
-charset-normalizer==3.3.2
+black==22.1.0
+box2d-py==2.3.5
 click==8.1.7
 cloudpickle==3.0.0
 contourpy==1.2.1
 cycler==0.12.1
-filelock==3.14.0
+exceptiongroup==1.2.1
+filelock==3.15.3
 fonttools==4.53.0
 fsspec==2024.6.0
-gym==0.23.1
+gym==0.25.1
 gym-minigrid==1.0.3
 gym-notices==0.0.8
-idna==3.7
-importlib_resources==6.4.0
+iniconfig==2.0.0
 Jinja2==3.1.4
 kiwisolver==1.4.5
 l2logger==1.8.2
 MarkupSafe==2.1.5
-matplotlib==3.9.0
 mpmath==1.3.0
+mypy-extensions==1.0.0
 networkx==3.3
-numpy==1.26.4
+numpy==1.21.4
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvrtc-cu12==12.1.105
@@ -35,24 +32,25 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.5.40
 nvidia-nvtx-cu12==12.1.105
-opencv-python==4.10.0.82
-packaging==24.0
-pandas==2.2.2
+opencv-python==4.10.0.84
+packaging==24.1
+pathspec==0.12.1
 pillow==10.3.0
+platformdirs==4.2.2
+pluggy==1.5.0
 pygame==2.1.0
 pyglet==2.0.15
 pyparsing==3.1.2
+pytest==8.2.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
-requests==2.32.3
 six==1.16.0
 sympy==1.12.1
 tabulate==0.9.0
-tella==2.1.0
+-e git+https://github.com/lifelong-learning-systems/tella.git@d5bd889f7be786af3242b62b38ee40ec08c08802#egg=tella
+tomli==2.0.1
 torch==2.3.1
-tqdm==4.66.4
 triton==2.3.1
 typing_extensions==4.12.2
 tzdata==2024.1
-urllib3==2.2.1
